* Config file was moved to more standard path
* Optimization of several algorithms (Ingo Weyrich)
* Background extraction is now available for sequence
* Midtone Transfer Function is now available for sequence
* Selection can be moved and freely modified, its size is displayed in UI (Sébastien Rombauts)
* Undo/Redo buttons now display the operations they act upon (Sébastien Rombauts)
* Fixed code for Big Endian machine (Flössie)
* Fixed bug in SER joining operation when Bayer information was lost
* Fixed a bug of inaccessible directories in MacOS Catalina
* Fixed crash on some OpenCV operation with monochrome images
* Fixed annoying error boxes about missing disk drives on Windows
* Fixed memory leak in minmax algorithms
* Fixed a bug in FITS from DSLR debayer

siril 0.9.12
11/04/19

* Fixed stat computation on 3channel FITS
* Fixed free memory computation on Windows
* Fixed a bug in RGB compositing mode allowing now users to use multichannel image tools
* Fixed crash after deconvolution of monochrome images
* Fixed a bug in astrometry when downloaded catalog was too big
* New split cfa feature
* Script status (line currently executed) is displayed in a statusbar
* TIFF export is now available for sequences
* Better dialog windows management
* Histogram tool refactoring
* Provide new strategies for free memory management
* Provide new photometric catalog for color calibration (APASS)
* Added new filter: Contrast Limited Adaptive Histogram Equalization
* Open sequence by double clicking on seq file

siril 0.9.11
05/27/19

* New icon set
* New photometric color calibration tool
* New background extraction tool working with 64-bit precision and dither
* Improved processing speed by optimizing sorting algorithms to each use
* Parallelizing preprocessing
* New image filtering for sequence processing: possible from the command line and with multiple filters