@@ -38,6 +38,7 @@ Complete refactoring
 * Midtone Transfer Function is now available for sequence
 * Selection can be moved and freely modified, its size is displayed in UI (Sébastien Rombauts)
 * Undo/Redo buttons now display the operations they act upon (Sébastien Rombauts)
+* Improved color saturation tool with a background factor to adjust the strength
 * Fixed code for Big Endian machine (Flössie)
 * Fixed bug in SER joining operation when Bayer information was lost
 * Fixed a bug of inaccessible directories in MacOS Catalina
